# solid3

./: .gitignore  CMakeLists.txt
examples/: gldemo.cpp  mnm.cpp  physics.cpp
examples/dynamics/: RigidBody.cpp
include/: SOLID.h  SOLID_types.h
scripts/: 010_solid_build.sh  01_solid_build.sh  02_solid_clean.sh
src/: DT_C-api.cpp
src/qhull/: geom.c  io.c  qset.h  stat.c
tutorial/t010/: 010_build.sh  CMakeLists.txt
tutorial/t010/src/: main.cpp
tutorial/t020/: 010_build.sh  CMakeLists.txt
tutorial/t020/src/: main.cpp
